--- a/src/components/project1/expertise.css
+++ b/src/components/project1/expertise.css
@@ -7,7 +7,7 @@
 
 .expertise-title {
   text-align: center;
-  font-size: 36px;
+  /* font-size: 36px; */
   font-weight: 700;
   color: #003366;
   margin-bottom: 40px;
