--- a/src/css/service_card.css
+++ b/src/css/service_card.css
@@ -1,3 +1,6 @@
+.service-img{
+  height: 60vh;
+}
 /* Headings */
 .service_card1_headingstrature {
   font-family: "Outfit", sans-serif;
@@ -32,6 +35,7 @@
   max-height: 400px;
   display: block;
   object-fit: cover;
+  height: 50vh;
 }
 
 /* Row stretch */
@@ -64,6 +68,11 @@
 
 /* Tablet view */
 @media (min-width: 768px) and (max-width: 1024px) {
+
+  .service-img{
+  height: 30vh;
+}
+
   .responsive-image {
     height: 100% !important;
     max-height: none;
@@ -99,6 +108,10 @@
 }
 
 @media (max-width: 768px) {
+  
+  .service-img{
+  height: 30vh;
+}
   .service-card-row .img-col {
     order: 1 !important;
   }
